# zmk

./: .gitignore
app/boards/shields/splitkb_aurora_sweep/boards/: nice_nano_v2.overlay
app/include/zmk/split/: common.h
app/include/zmk/split/bluetooth/: service.h
app/include/zmk/split/serial/: common.h  service.h
app/src/split/: CMakeLists.txt  Kconfig  common.c  split_listener.c
app/src/split/bluetooth/: service.c
app/src/split/serial/: CMakeLists.txt  Kconfig  central.c  common.c  service.c
